# you_hoard

./: .gitignore  DESIGN.md  README.md  ROADMAP.md  index.html  main.py  package.json  pyproject.toml  schema.sql  svelte.config.js  thoughts.md  vite.config.js
.cursor/rules/: development.mdc
app/api/endpoints/: auth.py  channels.py  downloads.py  subscriptions.py  videos.py
app/core/: config.py  database.py  downloader.py  logging_setup.py  metadata.py  quality.py  recovery.py  scheduler.py  security.py  ytdlp_service.py
app/models/: __init__.py  channel.py  scheduler.py  subscription.py  video.py
app/static/css/: main.css
app/static/js/: main.js
app/templates/: base.html  channels.html  downloads.html  index.html  login.html  settings.html  subscriptions.html  videos.html
docs/: authentication-approach.md  database-approach.md  example-youtube-links.md  implementation-plan.md  subscriptions.md
scripts/: setup.py  teardown.py
src/: App.svelte  main.js
src/components/: AddSubscriptionModal.svelte  AddVideoModal.svelte  EditSubscriptionModal.svelte  LoginForm.svelte  Navigation.svelte  Pagination.svelte  SearchFilters.svelte  SubscriptionCard.svelte  ToastContainer.svelte  VideoCard.svelte  VideoDetailModal.svelte
src/pages/: Channels.svelte  Downloads.svelte  Home.svelte  Settings.svelte  Subscriptions.svelte  Videos.svelte
src/stores/: auth.js
